syntax = "proto3";

package yandex.cloud.priv.disk_manager.v1;

option go_package = "a.yandex-team.ru/cloud/disk_manager/api/yandex/cloud/priv/disk_manager/v1;disk_manager";

message ImageUrl {
    string url = 1;
    string format = 2;
}
